tests/ui/parser/issues/issue-81827.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-81827.rs:6:27
   |
LL | fn r()->i{0|{#[cfg(r(0{]0
   |          -  - -   - -  - ^
   |          |  | |   | |  |
   |          |  | |   | |  missing open `[` for this delimiter
   |          |  | |   | unclosed delimiter
   |          |  | |   unclosed delimiter
   |          |  | unclosed delimiter
   |          |  unclosed delimiter
   |          unclosed delimiter

error: aborting due to 1 previous error

