tests/ui/parser/issues/issue-81827.rs
#![crate_name="0"]

fn main() {}

//~v ERROR this file contains an unclosed delimiter
fn r()->i{0|{#[cfg(r(0{]0
